--- a/src/less/case-study.less
+++ b/src/less/case-study.less
@@ -116,7 +116,7 @@ main {
     .section-title {
       h2 {
         font-size: 1.6rem;
-        color: #1fb1d1;
+        color: #27344e;
         padding-bottom: 1rem;
         line-height: 2rem;
       }
@@ -148,6 +148,7 @@ main {
     //General image styling under figure class
     .figure {
       margin-bottom: 2rem;
+      background: #eef5f9;
       img {
         width: 900px;
       }
@@ -164,6 +165,9 @@ main {
         margin-bottom: 1rem;
         p {
           line-height: 1.6rem;
+        }
+        img {
+          filter: brightness(75%);
         }
       }
 
@@ -278,7 +282,7 @@ main {
       justify-content: center;
       margin-bottom: 1rem;
       padding: 0.5rem;
-      background-color: #ebfcff;
+      background-color: #eef5f9;
       .card-title {
         width: 85%;
         font-weight: 600;
@@ -309,6 +313,17 @@ main {
         margin-right: 1rem;
       }
     }
+  }
+}
+
+.customer-interviews {
+  max-width: 100% !important;
+  width: 100% !important;
+  margin: 0 !important;
+  .section-title,
+  .section-content {
+    width: 90%;
+    margin: 0 auto;
   }
 }
 
