--- a/src/less/nav-bar.less
+++ b/src/less/nav-bar.less
@@ -39,7 +39,6 @@ nav {
       transition: all 0.5s ease;
       margin: 0 auto;
       padding-left: 1rem;
-      text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     }
 
     a:hover {
@@ -60,4 +59,9 @@ nav {
     color: rgba(39, 52, 78, 0.5);
   }
   border-bottom: 3px solid rgba(39, 52, 78, 0.5);
+}
+
+.nav-background {
+  background: rgba(255, 255, 255, 0.8);
+  transition: all 0.2s ease-in-out;
 }
